--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,13 @@
 <h2>Latest posts:</h2>
+<br />
+<!-- выполняем Руби-код в представлении -->
+<% @results.each do |post|%>
+<p>
+	<!-- вывод на экран -->
+    <%= post['content']%>
+    <br />
+    <br />
+    Added at <%= post['created_date']%>
+</p>
+<hr />
+<%end%>
