--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,10 @@
     <br />
     <br />
     Added at <%= post['created_date']%>
+    <br />
+    <br />
+    <a href="/post/"<%= post['id']%>>Comments</a>
+    <br />
 </p>
 <hr />
 <%end%>
