--- a/views/details.erb
+++ b/views/details.erb
@@ -9,6 +9,18 @@
 </p>
 <br />
 <h4>Comments:</h4>
+<hr />
+
+<% @comments.each do |comment|%>
+	<p> &emsp;
+		<%= comment['content'] %>
+		<br />
+		<br /> &emsp;
+		<span style="font-size: 75%; color: #999 ">Added at <%= comment['created_date']%></span>
+	</P>
+	<hr />
+<% end %>
+
 <p>
 	<form action="/details/<%= @row['id'] %>" method="POST" role="form">
 			<textarea name="content" class="form-control" rows="6" placeholder="Type comment text here"></textarea>
